Fixed issue where user was unable to acess the search on iOS tablets/Changed the styles of sign-up.html

--- a/static/custom/sign-up.css
+++ b/static/custom/sign-up.css
@@ -19,10 +19,12 @@ body {
 #footer {
 	background-color: transparent;
 }
+
+.navbar {
+	background-color: rgba(0, 0, 0, 0.5)
+}
 .btn {
 	background-color: transparent;
-	color: aquamarine;
-	border: 2px solid aquamarine;
 }
 .card-body label,
 .card-body p {
